@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "taskgen-ai"
-version = "0.0.6"
+version = "0.0.7"
 authors = [
   { name="John Tan Chong Min", email="tanchongmin@gmail.com" },
 ]
