@@ -1,3 +1,7 @@
+29 Feb 2024 (v0.0.7)
+- Throws an exception when `type:` is given in `output_format` for Function() when using External Functions as we do not do type checking there
+- Throws a similar exception when `type:` is given in `output_format` for `openai_json_mode = True` in `strict_json` or `Function`
+
 28 Feb 2024 (v0.0.6)
 - Made list processing in StrictJSON more robust
 
